--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV HUGO Leplingard</title>
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="./style.css">
     <meta name="description" content="CV HUGO Leplingard">
 </head>
 <body>
@@ -17,7 +17,8 @@
 
     <section>
 
-        <a href="https://www.google.fr/maps/search/5+rue+de+la+courbature,76000+Rouen/@49.4412784,1.066171,14z/data=!3m1!4b1?entry=ttu">
+        <a href="https://www.google.fr/maps/place/24+All.+Claude+Farr%C3%A8re,+69110+Sainte-Foy-l%C3%A8s-Lyon/@45.7322113,4.7861274,17z/data=!3m1!
+        4b1!4m6!3m5!1s0x47f4ebfca1532cf5:0x13a95533e9e045e1!8m2!3d45.7322077!4d4.7909983!16s%2Fg%2F11kpl8tq11?entry=ttu">
             <i>24 allée Claude-Farrere <br>69110 Sainte-foy-lès-Lyon</i></a>
         <a href="mailto:Hleplingard04@gmail.com"><i id="milieu">Hleplingard04@gmail.com</i></a>
         <a href="tel:+06 81 40 09 60"><i>06 81 40 09 60</i></a>
@@ -79,7 +80,7 @@
         <div>
             <a href="https://fr.linkedin.com/in/hugo-leplingard-924793262"><img src="../images/linkedin.png" alt="linkedin"></a>
             <a href="#"><img src="../images/twitter.png" alt="twitter"></a>
-            <a href="#"><img src="../images/github.png" alt="github"></a>
+            <a href="https://github.com/Huglecrack/CV_en__ligne_SFLL"><img src="../images/github.png" alt="github"></a>
         </div>
 
         <p>Dernière mise à jour le 3 mars 2024</p>
