--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header>
 
-        <h1>HUGO Leplingard</h1>
-        <p>postule en tant que développeur front-end</p>
+        <div>
+            <h1><strong>HUGO Leplingard</strong></h1>
+            <p><strong>postule en tant que développeur front-end</strong></p>
+        </div>
 
     </header>
 
@@ -32,16 +34,16 @@
         <h3>Langues parlées</h3>
 
         <ul>
-            <li>Français : courrant</li>
-            <li>Anlais : avancé</li>
+            <li>Français : Courrant</li>
+            <li>Anlais : Avancé</li>
         </ul>
 
         <h3>Centres d'interets</h3>
 
         <ul>
-            <li>basket-ball</li>
-            <li>work-out</li>
-            <li>codage</li>
+            <li>Basket-ball</li>
+            <li>Work-out</li>
+            <li>Codage</li>
         </ul>
 
     </aside>
@@ -51,7 +53,7 @@
         <article>
 
             <h2>Expériences professionelles</h2>
-            <h3>2023 <strong>Missions Interim divers </strong></h3>
+            <h3>2023 <strong>Missions d'Interim divers </strong></h3>
 
         </article>
         <article>
@@ -68,9 +70,9 @@
 
             <h3>Personnelles</h3>
             <ul>
-                <li>organisé</li>
-                <li>ponctuel</li>
-                <li>sociable</li>
+                <li>Organisé</li>
+                <li>Ponctuel</li>
+                <li>Sociable</li>
             </ul>
 
         </article>
